--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "6de9a967",
    "metadata": {},
    "outputs": [
@@ -24,31 +24,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           sale_id  product_id  customer_id     quantity         price  \\\n",
-      "count  5000.000000  5000.00000  5000.000000  5000.000000   5000.000000   \n",
-      "mean   2500.500000    50.06440   246.434200     2.488400  24332.769800   \n",
-      "std    1443.520003    28.63281   143.688746     1.112166  13546.637287   \n",
-      "min       1.000000     1.00000     1.000000     1.000000   1507.000000   \n",
-      "25%    1250.750000    25.00000   121.000000     2.000000  12245.000000   \n",
-      "50%    2500.500000    50.00000   243.500000     2.000000  24150.000000   \n",
-      "75%    3750.250000    75.00000   371.000000     3.000000  33839.000000   \n",
-      "max    5000.000000   100.00000   500.000000     4.000000  49646.000000   \n",
       "\n",
-      "             revenue  \n",
-      "count    5000.000000  \n",
-      "mean    60114.426800  \n",
-      "std     45040.527503  \n",
-      "min      1507.000000  \n",
-      "25%     24939.000000  \n",
-      "50%     47532.000000  \n",
-      "75%     89223.000000  \n",
-      "max    198584.000000  \n"
+      "Missing values:\n",
+      " product_id    0\n",
+      "name          0\n",
+      "category      0\n",
+      "supplier      0\n",
+      "price         0\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing values:\n",
+      " customer_id    0\n",
+      "location       0\n",
+      "gender         0\n",
+      "signup_date    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing values: \n",
+      " sale_id        0\n",
+      "product_id     0\n",
+      "customer_id    0\n",
+      "timestamp      0\n",
+      "quantity       0\n",
+      "price          0\n",
+      "revenue        0\n",
+      "dtype: int64\n"
      ]
     }
    ],
    "source": [
+    "# checking for missing files using is null method\n",
+    "print(\"\\nMissing values:\\n\", product.isnull().sum())\n",
     "\n",
-    "print(sales.describe())"
+    "print(\"\\nMissing values:\\n\", customers.isnull().sum())\n",
+    "\n",
+    "print(\"\\nMissing values: \\n\", sales.isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "967f9805",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns for product: ['product_id', 'name', 'category', 'supplier', 'price']\n",
+      "Columns for sales: ['sale_id', 'product_id', 'customer_id', 'timestamp', 'quantity', 'price', 'revenue']\n",
+      "Columns for customers: ['customer_id', 'location', 'gender', 'signup_date']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check title of columns\n",
+    "\n",
+    "print(\"Columns for product:\", product.columns.tolist())\n",
+    "print(\"Columns for sales:\", sales.columns.tolist())\n",
+    "print(\"Columns for customers:\", customers.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3d4b8bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicates in product: 0\n",
+      "Duplicates in sales: 0\n",
+      "Duplicates in customers: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check for duplicate\n",
+    "\n",
+    "print(\"Duplicates in product:\", product.duplicated().sum())\n",
+    "print(\"Duplicates in sales:\", sales.duplicated().sum())\n",
+    "print(\"Duplicates in customers:\", customers.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "82ea83fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
    ]
   }
  ],
