created a new file for the cleaned data

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "id": "6de9a967",
    "metadata": {},
    "outputs": [
@@ -111,12 +111,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "82ea83fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Male' 'Female']\n",
+      "['Ibadan' 'Port Harcourt' 'Kano' 'Abuja' 'Enugu' 'Lagos']\n",
+      "['Supplier A' 'Supplier D' 'Supplier C' 'Supplier B']\n",
+      "399\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking for standardize format in dates, gender, locations, suppliers_name using uniques method\n",
+    "\n",
+    "print(customers[\"gender\"].unique())\n",
+    "print(customers[\"location\"].unique())\n",
+    "print(product[\"supplier\"].unique())\n",
+    "print(customers[\"signup_date\"].nunique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4c12901",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower quantile for sales : 12245.0, Upper quantile for sales : 33839.0\n",
+      "Lower quantile for product : 12390.5, Upper quantile for product : 33943.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#detecting outliers\n",
+    "\n",
+    "Qs1 = sales[\"price\"].quantile(0.25)\n",
+    "Qs3 = sales[\"price\"].quantile(0.75)\n",
+    "\n",
+    "#outliers for sales\n",
+    "print(f\"Lower quantile for sales : {Qs1}, Upper quantile for sales : {Qs3}\")\n",
+    "\n",
+    "Qp1 = product[\"price\"].quantile(0.25)\n",
+    "Qp3 = product[\"price\"].quantile(0.75)\n",
+    "\n",
+    "#outliers for product\n",
+    "print(f\"Lower quantile for product : {Qp1}, Upper quantile for product : {Qp3}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "478ac4ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "#create a new column  _revenue\n",
+    "\n",
+    "sales['_revenue'] = sales['price'] * sales['quantity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a9b25c73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save corrected data to new path\n",
+    "\n",
+    "sales.to_csv(\"../data/cleaned_sales.csv\", index=False)"
    ]
   }
  ],
