--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -189,6 +189,80 @@
     "\n",
     "sales.to_csv(\"../data/cleaned_sales.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "512348a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sale_id  product_id  customer_id   timestamp  quantity  price_x  revenue  \\\n",
+      "0        1          61           76  2022-12-06         3    29741    89223   \n",
+      "1        2          35          495  2022-10-24         2     7991    15982   \n",
+      "2        3          64          461  2021-11-06         2    12245    24490   \n",
+      "3        4          25          114  2022-05-10         3    33839   101517   \n",
+      "4        5          24          111  2021-12-04         3     1935     5805   \n",
+      "\n",
+      "   _revenue       location  gender signup_date        name     category  \\\n",
+      "0     89223  Port Harcourt    Male  2022-01-17  Product_61         Toys   \n",
+      "1     15982  Port Harcourt    Male  2021-06-29  Product_35  Electronics   \n",
+      "2     24490          Lagos  Female  2020-11-30  Product_64      Fashion   \n",
+      "3    101517  Port Harcourt    Male  2022-04-15  Product_25        Books   \n",
+      "4      5805           Kano    Male  2022-11-15  Product_24      Fashion   \n",
+      "\n",
+      "     supplier  price_y  \n",
+      "0  Supplier D    29741  \n",
+      "1  Supplier A     7991  \n",
+      "2  Supplier C    12245  \n",
+      "3  Supplier D    33839  \n",
+      "4  Supplier B     1935  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#merge all the data\n",
+    "\n",
+    "master = (\n",
+    "    sales\n",
+    "    .merge(customers, on=\"customer_id\", how=\"left\")\n",
+    "    .merge(product, on=\"product_id\", how=\"left\")\n",
+    ")\n",
+    "master.to_csv(\"../data/master_dataset.csv\", index=False)\n",
+    "print(master.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6a17f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     customer_id  customer_lifetime_value\n",
+      "0              1                   692985\n",
+      "1              2                   693777\n",
+      "2              3                   416376\n",
+      "3              4                   515838\n",
+      "4              5                   301383\n",
+      "..           ...                      ...\n",
+      "495          496                   669037\n",
+      "496          497                   456924\n",
+      "497          498                  1229418\n",
+      "498          499                   590842\n",
+      "499          500                   232971\n",
+      "\n",
+      "[500 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
